# 7.10-12Hackthon-Disc-Throwing-Program

./: README.md
PythonScripts/: .gitignore  LICENSE  README.md
PythonScripts/panthera_cpp/: .gitignore  README.md
PythonScripts/panthera_cpp/motor_cpp/: CMakeLists.txt  README.md
PythonScripts/panthera_cpp/motor_cpp/cmake/: hightorque_robotConfig.cmake.in
PythonScripts/panthera_cpp/motor_cpp/doc/: CLAUDE.md  使用指南.md
PythonScripts/panthera_cpp/motor_cpp/include/: parse_robot_params.hpp  serial_struct.hpp
PythonScripts/panthera_cpp/motor_cpp/include/hardware/: canboard.hpp  canport.hpp  motor.hpp  robot.hpp
PythonScripts/panthera_cpp/motor_cpp/robot_param/: 12dof_STM32H730_model_test_Orin_params.yaml  1dof_STM32H730_model_test_Orin_params.yaml  20dof_STM32H730_model_test_Orin_params.yaml  23dof_STM32H730_model_test_Orin_params.yaml  2dof_STM32H730_model_test_Orin_params.yaml  6dof_STM32H730_model_test_Orin_params.yaml  80dof_STM32H730_model_test_Orin_params.yaml  motor_1.yaml  robot_config.yaml
PythonScripts/panthera_cpp/motor_cpp/src/: parse_robot_params.cpp  serial_driver.cpp
PythonScripts/panthera_cpp/motor_cpp/src/hardware/: canboard.cpp  canport.cpp  motor.cpp  robot.cpp
PythonScripts/panthera_cpp/motor_cpp/third_part/lcm/lcm-java/jchart2d-code/src/info/monitorenter/gui/chart/axis/: AAxis.java
PythonScripts/panthera_cpp/motor_cpp/third_part/serial_cmake/: CMakeLists.txt
PythonScripts/panthera_cpp/robot_cpp/: CMakeLists.txt  README.md
PythonScripts/panthera_cpp/robot_cpp/Panthera-HT_description/: CMakeLists.txt  package.xml
PythonScripts/panthera_cpp/robot_cpp/Panthera-HT_description/launch/: display.launch  gazebo.launch
PythonScripts/panthera_cpp/robot_cpp/Panthera-HT_description/urdf/: Panthera-HT_description_follower.urdf  Panthera-HT_description_leader.urdf
PythonScripts/panthera_cpp/robot_cpp/example/: 0_robot_get_state.cpp  0_robot_set_zero.cpp  1_Joints_Sync_Arrival_control.cpp  1_PD_control.cpp  1_PosVel_control.cpp  1_Vel_control.cpp  1_forward_kinematics_test.cpp  1_inverse_kinematics_test.cpp  2_Jointimpendence_control_with_gra_fri_pd.cpp  2_Jointimpendence_control_with_gra_pd.cpp  2_gravity_compensation_control.cpp  2_gravity_friction_compensation_control.cpp  2_inv_PosVel_control.cpp  3_gravity_compensation_with_fk.cpp  3_interpolation_control_nozeroVel.cpp  3_interpolation_control_zeroVel.cpp  3_sin_trajectory_control.cpp  4_impedance_trajectory_control_with_gra_pd.cpp  5_record_trajectory.cpp  5_replay_trajectory.cpp  5_teleop_control.cpp
PythonScripts/panthera_cpp/robot_cpp/include/panthera/: Panthera.hpp  SignalHandler.hpp
PythonScripts/panthera_cpp/robot_cpp/robot_param/: Follower.yaml  Leader.yaml
PythonScripts/panthera_cpp/robot_cpp/robot_param/motor_param/: 6dof_Panthera_params_follower.yaml
PythonScripts/panthera_cpp/robot_cpp/src/panthera/: Panthera.cpp
PythonScripts/panthera_python/: .gitignore  CMakeLists.txt  README.md  pyproject.toml  requirements.txt  setup.py
PythonScripts/panthera_python/Panthera-HT_description/config/: joint_names_Panthera-HT_description.yaml
PythonScripts/panthera_python/Panthera-HT_description/urdf/: Panthera-HT_description.csv  Panthera-HT_description_follower.urdf
PythonScripts/panthera_python/motor_whl/: hightorque_robot-1.0.0-cp310-cp310-linux_aarch64.whl  hightorque_robot-1.0.0-cp311-cp311-linux_aarch64.whl  hightorque_robot-1.0.0-cp312-cp312-linux_aarch64.whl  hightorque_robot-1.0.0-cp39-cp39-linux_aarch64.whl  hightorque_robot-1.2.0-cp310-cp310-linux_x86_64.whl  hightorque_robot-1.2.0-cp311-cp311-linux_x86_64.whl  hightorque_robot-1.2.0-cp312-cp312-linux_x86_64.whl  hightorque_robot-1.2.0-cp39-cp39-linux_x86_64.whl
PythonScripts/panthera_python/robot_param/: Follower.yaml  Leader.yaml
PythonScripts/panthera_python/robot_param/motor_param/: motor_1.yaml  motor_6.yaml  robot_config.yaml
PythonScripts/panthera_python/scripts/: 0_robot_get_state.py  0_robot_set_zero.py  1_record.py  1_record_PartiallyFixed.py  2_replay.py  4_red_disc_detection.py  5_red_teammate_detection.py  5_replay.py  5_replay_SetGripper.py  9_hand_eye_calibration.py  Demo.py  Demo_AutoCatch.py  arm_teach_20260710_183221.jsonl  arm_teach_20260710_183246.jsonl  arm_teach_20260710_183909.jsonl  arm_teach_20260710_183909_release_f5557_20260710_184250.jsonl  arm_teach_20260710_200737.jsonl  arm_teach_20260710_200837.jsonl  arm_teach_20260710_200941.jsonl  arm_teach_20260710_201002.jsonl  arm_teach_20260710_211302.jsonl  arm_teach_20260710_220319.jsonl  arm_teach_20260710_222924.jsonl  arm_teach_20260710_222939.jsonl  arm_teach_20260710_223033.jsonl  arm_teach_20260710_235448.jsonl  arm_teach_20260711_004510.jsonl  arm_teach_20260711_074915.jsonl  arm_teach_20260711_074942.jsonl  arm_teach_20260711_075312.jsonl  arm_teach_20260711_121625.jsonl  arm_teach_20260711_121631.jsonl  arm_teach_20260711_121733.jsonl  hand_eye_calibration.json  red_frisbee_FollowGrasp.py
PythonScripts/panthera_python/scripts/Panthera_lib/: Panthera.py  __init__.py  recorder.py
PythonScripts/panthera_python/scripts/motor_example/: 01_motor_get_status.py  02_position_control.py  03_velocity_control.py  04_torque_control.py  05_voltage_control.py  06_current_control.py  07_pos_vel_maxtorque_control.py  08_pos_vel_torque_kp_kd_control.py  09_set_zero.py  motor_README.md  motor_control.py
PythonScripts/panthera_python/src/: bindings.cpp
redesign_gripper/: Readme.md  redesign_lower_gripper.3mf  redesign_upper_gripper.3mf
