[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "cmake>=3.12",
    "pybind11>=2.6.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "hightorque_robot"
version = "1.0.0"
description = "高扭矩机器人电机控制Python接口"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "Tang", email = "user@example.com"}
]
keywords = ["robot", "motor", "control", "CAN", "高扭矩"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: C++",
]

dependencies = [
    "numpy>=1.19.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/yourusername/hightorque_robot_python"
